-feature#0001122: Propagate Host Template changes to related hosts
-feature#0001123: Performance tweak by adding some indices
-feature#0001124: Devices/Host Templates - remove already associated objects from dropdown selector
-feature#0001179: Visual Fix for CACTI Graphs View Interface(list,preview)
-feature#0001185: Mass enable/disable graph export per graph from Graph Management
-feature#0001332: non SNMP Hosts' Reindex Method should not default to "Uptime goes backwards"
-feature#0001350: Compare Cacti Data Source Info to current RRD File Info
-feature#0001406: Dynamically display field description for templates
-feature#0001408: Hide templated input fields
-feature#0001409: Add context sensitive page help linking to cacti dokuwiki
-feature#0001438: Allow for drag and drop reordering of graph template items
-feature#0001439: New pseudo variable |host_template|, support all pseudo variable derived from host table
-feature#0001450: Template import script
-feature#0001525: add rebuild_poller_cache --host-id=[ID]
-feature: jQuery "TableDnd" used for cdef item sort (courtesy Browniebraun)
-feature: jQuery "TableDnd" for Graph Template Item
-feature: jQuery "TableDnd" for Data Queries Suggested Values
-feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
-feature: Support for new variables |host_ping_retries| and |host_max_oids|
-feature: Support changing the "Reindex Method" of associated data queries
-feature: Manage all Host Availability Options in each Host Template, derive Host options from those
-feature: Add Server Time to page headers, pay respect to user specific date/timeformats
-feature: add_device.php uses a host template like feature#0001122
-feature: Allow the enabling and disabling of a Data Source from the Data Source Edit form
-feature: Rerun already associated SNMP Queries if any SNMP related field was changed during host edit